workshop03/setups-additional-resources/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: myapp-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
    - host: app1.157.230.194.12.nip.io
      http:
        paths:
          - backend:
              serviceName: myappv1-svc
              servicePort: 80
    - host: app2.157.230.194.12.nip.io
      http:
        paths:
          - backend:
              serviceName: myappv2-svc
              servicePort: 80
  backend:
    serviceName: myappv2-svc
    servicePort: 80
